--- a/.github/workflows/master_ourtradinglogicuiapp.yml
+++ b/.github/workflows/master_ourtradinglogicuiapp.yml
@@ -23,8 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
-        projects: '**/app/*.csproj'
+        run: dotnet build '**/app/*.csproj' --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
