--- a/src/app/Properties/launchSettings.json
+++ b/src/app/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "externalUrlConfiguration" : true,
     "iisExpress": {
       "applicationUrl": "http://localhost:11360",
       "sslPort": 44320
@@ -12,6 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "externalUrlConfiguration" : true,
       "applicationUrl": "http://localhost:5025",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -21,6 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "externalUrlConfiguration" : true,
       "applicationUrl": "https://localhost:7118;http://localhost:5025",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -29,6 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "externalUrlConfiguration" : true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
