Added test case

--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -26,6 +26,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\app\app.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
+    <ProjectReference Include="..\Database\Database.csproj" />
   </ItemGroup>
 
 </Project>
